test/files/ill-typed/7.lam
λx:Nat. let y = x + 1 in y : Nat -> Bool